--- a/gpa.html
+++ b/gpa.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>GPA calculator</title>
-        <script src="gpa.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <!-- script injected in document <script src="gpa.js"></script> hence, not needed-->
+        <!--stylesheet injected in document <link rel="stylesheet" href="style.css"> hence, not needed-->
         <style>
             html{
             background-color:#e4e4e4;
