added noscript in gpa.html

--- a/gpa.html
+++ b/gpa.html
@@ -30,6 +30,9 @@
         </style>
     </head>
 <body> 
+    <noscript>
+        <p> Javascript is required. </p>
+    </noscript>
     <script>
         var name=alert("Welcome to GPA calculator");
         document.write("<h1>GPA calculator<br /></h1>");
