--- a/gpa.html
+++ b/gpa.html
@@ -17,9 +17,9 @@
             body{
                 font-size: 150%;
                 font-family: monospace;
-                max-width: 50em;
-                line-height: 1.5;
-                padding-left:10%;
+				max-width: 90%;
+				line-height: 1.5;
+				padding:10px;
             }
             h1,h2{
                 color: #3b3a3a;
@@ -39,7 +39,7 @@
         var subs=prompt("Number of subjects?");
         //checking for valid values
         subs=parseInt(subs);
-        if (!subs || subs<0) {
+        if (!(Number.isInteger(subs)) || subs<0) {
             document.write("<h2 class=error> Enter positive  numeric value for subject!</h2>");
             errorMessage();
         }
@@ -53,7 +53,7 @@
             var marks=prompt("Enter marks in paper "+(i+1));
             //checking for valid values
             marks=parseInt(marks);
-            if (!marks || marks>100 || marks<0){
+            if (!(Number.isInteger(marks)) || marks>100 || marks<0){
                 document.write("<h2 class=error> Only numeric values between 0 and 100 are allowed!</h2>");
                 errorMessage();
             }
